--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -28,6 +28,18 @@ library(mapview)
 library(leafem)
 ```
 
+# Doel
+
+We zullen een testcase maken van Leefdaal om het meetnet uit te breiden. Hiervoor moeten we een controlegebied voorzien. Deze moet vergelijkbaar zijn qua perceelsgrootte, dooradering, aandeel beheersovereenkomsten, landgebruik ...  
+We beschouwen hier doelgebied Zavelberg:  
+  
+Dit is het deelgebied van plateau Leefdaal met de hoogste dekkingsgraad aan beheerovereenkomsten, nl. 12 %. De totale oppervlakte van deze polygoon is 478 ha. Ter vergelijking, UHasselt heeft daar 3 jaar lang ook MAS punten geteld, misschien interessant om daar later mee te vergelijken (puntenset staat op de drive).
+
+We beschouwen twee potentiële controlegebieden:  
+  
+- Kortenberg (twee deelgebieden samen 480ha, vlakbij de luchthaven van Zaventem) waar er geen (echt nul) beheerovereenkomsten liggen, en er iets ten noorden van wel een kerngebied ligt (dus kan niet slecht zijn voor akkervogels).
+- Lovenjoel, daar is een polygoon van 483ha getekend. Dat is zeer gelijkaardig gebied, en daar liggen al nieuwe MAS-punten. We zouden kunnen bekijken of we deze als test kunnen gebruiken. Daar liggen wel al redelijk wat beheerovereenkomsten, terwijl het geen kerngebied is.
+
 
 # Inlezen data
 
@@ -45,5 +57,4 @@ leefdaal_sf <- st_read(here(data_path, "Leefdaal_ctr.shp"))
 mapview(leefdaal_sf, zcol = "Naam", layer.name = "Deelgebied") %>%
   addStaticLabels(label = leefdaal_sf$Naam)
 ```
-
 
