--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -28,6 +28,7 @@ library(mapview)
 library(leafem)
 ```
 
+
 # Doel
 
 We zullen een testcase maken van Leefdaal om het meetnet uit te breiden. Hiervoor moeten we een controlegebied voorzien. Deze moet vergelijkbaar zijn qua perceelsgrootte, dooradering, aandeel beheersovereenkomsten, landgebruik ...  
@@ -57,4 +58,27 @@ leefdaal_sf <- st_read(here(data_path, "Leefdaal_ctr.shp"))
 mapview(leefdaal_sf, zcol = "Naam", layer.name = "Deelgebied") %>%
   addStaticLabels(label = leefdaal_sf$Naam)
 ```
+
+
+# Data voorbereiden
+
+We splitsen de volledige laag in aparte polygonen:
+
+- Zavelberg
+- Kortenberg
+- Lovenjoel
+
+```{r}
+zavelberg_sf <- leefdaal_sf %>% filter(Naam == "Zavelberg")
+kortenberg_sf <- leefdaal_sf %>% filter(startsWith(Naam, "Kortenberg")) %>%
+  st_union() %>%
+  st_as_sf()
+lovenjoel_sf <- leefdaal_sf %>% filter(Naam == "Lovenjoel")
+
+
+mapview(zavelberg_sf, col.regions = "red") +
+  mapview(kortenberg_sf) +
+  mapview(lovenjoel_sf, col.regions = "green")
+```
+
 
