add structure in file to compare polygons

--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -82,3 +82,19 @@ mapview(zavelberg_sf, col.regions = "red") +
 ```
 
 
+# Vergelijking doel en controlegebieden
+## Landgebruik
+
+
+## Beheerovereenkomsten
+
+
+## Hoofdteelt
+
+
+## Openheid landschap
+
+
+## ...
+
+
